    * ELF files in %(testdir)s and %(debuglibdir)s will no longer export
      soname provides.  (CNY-1138, CNY-1139)
    * cvc is now able to check out source troves that have been shadowed from
      a branch that no longer contains the files. (CNY-462)
    * the Install recipe class now has the ability to copy symbolic links.
      (CNY-288)

  o Bug Fixes:
    * Builds that resulted in changesets containg the same file
      in different locations would fail to commit if the files differed
      only by mtime. (CNY-1114)
    * Builds that resulted in changesets containg the same file
      in different locations would fail to commit if the files differed
      only by mtime. (CNY-1114)
    * The mirror script now correctly handles the cases where
      the PathIdConflict erros are raised by certain source repositories
      during mirroring. (CNY-426)
    * Perl dependency strings containing double colons are now properly
      accepted on the command line. (CNY-1132)
    * cvc stat now correctly displays the usage information when extra
      arguments are specified. (CNY-1126)
    * conary update --apply-critical will now behave corractly if the update
      job contains (besides the conary package which is the source of critical
      updates) linked troves. Linked troves are troves with overlapping paths.
      (CNY-1115)
    * A GET request to the "changeset" URL of a repository server that
      does not supply any arguments no longer results in an Internal
      Server Error.  The repository can be configured to send email to
      an email address with debugging information. (CNY-1142)
    * When checking to make sure that the URL used to upload a
      changeset matches the repository base URL, both URLs are now
      normalized before the comparison is made. (CNY-1140)

  o Internal changes:
    * Conary now supports being built against an internal copy of the
      sqlite3 library for cases when the system sqlite3 is not the